--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Ficha Personal</title>
+  <title>Quispe Pandia Juan Daniel</title>
   <style>
     body {
       font-family: Arial, Helvetica, sans-serif;
@@ -50,7 +50,7 @@
 
   <div class="seccion">
     <h2>Contacto</h2>
-    <div class="dato"><strong>Correo electrónico:</strong> juan.quispe.pandia.com</div>
+    <div class="dato"><strong>Correo electrónico:</strong> juan.quispe.pandia@gmail.com</div>
     <div class="dato">
   <strong>LinkedIn:</strong> 
   <a href="https://www.linkedin.com/in/juan-daniel-quispe-pandia-536bb2388/" target="_blank">
@@ -67,3 +67,4 @@
 
 </body>
 </html>
+
