--- a/index.html
+++ b/index.html
@@ -65,6 +65,15 @@
     
   </div>
 
+    <!-- Sección de Profesores -->
+    <h2>Profesores</h2> <!-- Subtítulo -->
+    <ul>
+        <li><a href="https://www.linkedin.com/in/ecuadrosv">Dr.Ernesto Cuadro Vargas</a></li>
+        <li><a href="mailto:luis.gomez@ejemplo.com">Luis Gómez</a></li>
+        <li><a href="mailto:carla.rodriguez@ejemplo.com">Carla Rodríguez</a></li>
+        <li><a href="mailto:jose.hernandez@ejemplo.com">José Hernández</a></li>
+    </ul>
 </body>
 </html>
+
 
