--- a/index.html
+++ b/index.html
@@ -68,12 +68,20 @@
     <!-- Sección de Profesores -->
     <h2>Profesores</h2> <!-- Subtítulo -->
     <ul>
-        <li><a href="https://www.linkedin.com/in/ecuadrosv">Dr.Ernesto Cuadro Vargas</a></li>
-        <li><a href="mailto:luis.gomez@ejemplo.com">Luis Gómez</a></li>
-        <li><a href="mailto:carla.rodriguez@ejemplo.com">Carla Rodríguez</a></li>
-        <li><a href="mailto:jose.hernandez@ejemplo.com">José Hernández</a></li>
+        <li><a href="https://www.linkedin.com/in/ecuadrosv" target="_blank">Dr.Ernesto Cuadro Vargas</a></li>
+        <li><a href="mailto:luis.gomez@ejemplo.com" target="_blank">Luis Gómez</a></li>
+        <li><a href="mailto:carla.rodriguez@ejemplo.com" target="_blank">Carla Rodríguez</a></li>
+        <li><a href="mailto:jose.hernandez@ejemplo.com" target="_blank">José Hernández</a></li>
+    </ul>
+   <h2>Compañeros</h2> <!-- Subtítulo -->
+    <ul>
+        <li><a href="https://chaskacandia.github.io/chaskacandiaochoa.github.io/" target="_blank">Chaska Candia</a></li>
+        <li><a href="mailto:luis.gomez@ejemplo.com" target="_blank">Luis Gómez</a></li>
+        <li><a href="mailto:carla.rodriguez@ejemplo.com" target="_blank">Carla Rodríguez</a></li>
+        <li><a href="mailto:jose.hernandez@ejemplo.com" target="_blank">José Hernández</a></li>
     </ul>
 </body>
 </html>
+
 
 
