--- a/index.html
+++ b/index.html
@@ -76,12 +76,13 @@
    <h2>Compañeros</h2> <!-- Subtítulo -->
     <ul>
         <li><a href="https://chaskacandia.github.io/chaskacandiaochoa.github.io/" target="_blank">Chaska Candia</a></li>
-        <li><a href="mailto:luis.gomez@ejemplo.com" target="_blank">Luis Gómez</a></li>
-        <li><a href="mailto:carla.rodriguez@ejemplo.com" target="_blank">Carla Rodríguez</a></li>
-        <li><a href="mailto:jose.hernandez@ejemplo.com" target="_blank">José Hernández</a></li>
+        <li><a href="mailto:luis.gomez@ejemplo.com" target="_blank">Selena Ccallomamani </a></li>
+        <li><a href="mailto:carla.rodriguez@ejemplo.com" target="_blank">Jorge Castro</a></li>
+        <li><a href="https://leonardocruzmamani28.github.io/" target="_blank">Leonardo Cruz</a></li>
     </ul>
 </body>
 </html>
+
 
 
 
