--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
     <h2>Profesores</h2> <!-- Subtítulo -->
     <ul>
         <li><a href="https://www.linkedin.com/in/ecuadrosv" target="_blank">Dr.Ernesto Cuadro Vargas</a></li>
-        <li><a href="mailto:luis.gomez@ejemplo.com" target="_blank">Luis Gómez</a></li>
-        <li><a href="mailto:carla.rodriguez@ejemplo.com" target="_blank">Carla Rodríguez</a></li>
-        <li><a href="mailto:jose.hernandez@ejemplo.com" target="_blank">José Hernández</a></li>
+        <li><a href="https://www.linkedin.com/in/angel-leonardo-ramos-rodr%C3%ADguez-09107460/" target="_blank">Angel Leonardo Ramos Rodríguez</a></li>
+        <li><a href="https://www.linkedin.com/in/karlolam/?originalSubdomain=pe" target="_blank">Karlo Alfonso Lam Obregón</a></li>
+        <li><a href="https://www.linkedin.com/in/carlos-abarca-rubianes-b2242a35/" target="_blank">Carlos Abarca Rubianes </a></li>
     </ul>
    <h2>Compañeros</h2> <!-- Subtítulo -->
     <ul>
@@ -82,6 +82,7 @@
     </ul>
 </body>
 </html>
+
 
 
 
